# gps-tracking-sim

./: CMakeLists.txt
include/: crs_converter.h  gps_messages.h  model_params.h  vehicle.h
src/: crs_converter.cpp  main.cpp  model_params.cpp
tests/: test.nmea  test.params  test_2.nmea  test_2.params  test_3.nmea  test_3.params  test_4.nmea  test_4.params
